<resources>
    <string name="app_name">NDCA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="diet">Diet</string>
    <string name="settings">Settings</string>
    <string name="cam">Camera</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="modify_diet">Modify Diet</string>
    <string name="suggestions">Suggestions</string>
    <string name="this_is_placeholder_text">This is Placeholder Text</string>
    <string name="collapsible_picture">collapsible picture</string>
    <string name="good">Good</string>
    <string name="diet_name">Diet Name</string>
    <string name="your_diet">Your Diet</string>
    <string name="bad">Bad</string>
    <string name="good_for_diet">good for diet</string>
    <string name="bad_for_diet">Bad for Diet</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>


    <!-- Strings related to FB login -->
    <string name="facebook_app_id">813379599006194</string>
    <string name="fb_login_protocol_scheme">fb813379599006194</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
