<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:id="@+id/diet_coordinator"
        tools:context=".DietFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme"
            android:id="@+id/appBarLayout">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorAccent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/your_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/your-diet"
                            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/diet-name"
                            android:textStyle="bold" android:textColor="@color/colorAccent" android:textSize="18sp"
                            app:layout_constraintStart_toEndOf="@+id/good__tv" android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/bad_tv"
                            android:textAlignment="center"/>
                    <TextView
                            android:text="@string/diet_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/diet-name"
                            android:layout_marginTop="4dp"
                            app:layout_constraintTop_toBottomOf="@+id/your-diet"
                            android:layout_marginBottom="196dp"
                            app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold"
                            android:textColor="@color/colorAccent" android:textSize="18sp"
                            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/bad_tv"
                            app:layout_constraintStart_toEndOf="@+id/good__tv" android:layout_marginStart="8dp"
                            android:textAlignment="center"/>
                    <View
                            android:id="@+id/top_divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider"
                            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.291"/>
                    <TextView
                            android:text="@string/good"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/good__tv" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="88dp"
                            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="143dp"
                            app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold"
                            android:textAlignment="center" android:textColor="@color/colorAccent"
                            android:textSize="18sp" android:layout_marginEnd="8dp"
                            app:layout_constraintEnd_toEndOf="@+id/good3"/>
                    <TextView
                            android:text="@string/bad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/bad_tv" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="87dp"
                            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="144dp"
                            app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold"
                            android:textSize="18sp" android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            app:layout_constraintStart_toEndOf="@+id/vert_divider" android:layout_marginStart="8dp"/>
                    <View
                            android:id="@+id/vert_divider"
                            android:layout_width="1dp"
                            android:layout_height="0dp"
                            android:background="?android:attr/listDivider"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            app:layout_constraintTop_toTopOf="@+id/bot_divider"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                    <View
                            android:id="@+id/bot_divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider"
                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintTop_toBottomOf="@+id/good__tv"/>
                    <TextView
                            android:text="@string/good_for_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/good1"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/good__tv"
                            app:layout_constraintEnd_toStartOf="@+id/vert_divider" android:layout_marginEnd="8dp"
                            android:textAlignment="center" android:textColor="@color/colorAccent"/>
                    <TextView
                            android:text="@string/good_for_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/good2"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                            app:layout_constraintEnd_toStartOf="@+id/vert_divider" android:layout_marginEnd="8dp"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/good1"
                            android:textAlignment="center" android:textColor="@color/colorAccent"/>
                    <TextView
                            android:text="@string/good_for_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/good3" app:layout_constraintEnd_toStartOf="@+id/vert_divider"
                            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/good2" android:textAlignment="center"
                            android:textColor="@color/colorAccent"/>
                    <TextView
                            android:text="@string/good_for_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/good4"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/good3"
                            app:layout_constraintEnd_toStartOf="@+id/vert_divider" android:layout_marginEnd="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                            android:textAlignment="center" android:textColor="@color/colorAccent"/>
                    <TextView
                            android:text="@string/good_for_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/good5" app:layout_constraintEnd_toStartOf="@+id/vert_divider"
                            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/good4"
                            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                            android:textAlignment="center" android:textColor="@color/colorAccent"/>
                    <TextView
                            android:text="@string/bad_for_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/Bad1"
                            app:layout_constraintStart_toEndOf="@+id/vert_divider"
                            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/bad_tv" android:textAlignment="center"
                            android:textColor="@color/colorAccent"/>
                    <TextView
                            android:text="@string/bad_for_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/bad2"
                            app:layout_constraintStart_toEndOf="@+id/vert_divider"
                            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            app:layout_constraintHorizontal_bias="0.0"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/Bad1"/>
                    <TextView
                            android:text="@string/bad_for_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/bad3"
                            app:layout_constraintStart_toEndOf="@+id/vert_divider"
                            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/bad2"/>
                    <TextView
                            android:text="@string/bad_for_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/bad4"
                            app:layout_constraintStart_toEndOf="@+id/vert_divider"
                            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/bad3"/>
                    <TextView
                            android:text="@string/bad_for_diet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/bad5"
                            app:layout_constraintStart_toEndOf="@+id/vert_divider"
                            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            app:layout_constraintHorizontal_bias="0.0"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/bad4"
                            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


        </androidx.recyclerview.widget.RecyclerView>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

